Shubham :- Added Styling using daisy ui

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
 @plugin "daisyui" {
-  themes: light --default, dark --prefersdark,retro;
+  themes: light --default, dark --prefersdark, retro, lofi, forest,pastel;
 }
