--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,5 +2,8 @@
 @plugin "daisyui";
 
 @plugin "daisyui" {
-  themes: light --default, light --prefersdark, dark, retro, lofi, forest, pastel, cupcake, corporate, dracula, swiss, bumblebee, halloween, night;
+  themes: light, dark, cupcake, bumblebee, emerald, corporate, synthwave, retro,
+    valentine, halloween, garden, lofi, pastel, fantasy, wireframe, black,
+    luxury, dracula, cmyk, autumn, business, acid, lemonade, night, coffee,
+    winter, dim, nord, sunset;
 }
